--- a/웹사이트 제작 연습/kakaocorp.com/static/scss/_.Desktop.scss
+++ b/웹사이트 제작 연습/kakaocorp.com/static/scss/_.Desktop.scss
@@ -1,8 +1,10 @@
+body{
+    font-family: 'Pretendard500';
+}
 nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;
     height: 72px;
     font-family: 'Pretendard500';
     #Resopnsive{
@@ -19,6 +21,121 @@ nav{
             display: flex;
             justify-content: space-between;
             width: 450px;
+        }
+        #IconMenu{
+            display: flex;
+            justify-content: space-between;
+            width: 140px;
+        }
+    }
+}
+#Contents{
+    position: relative;
+    max-width: 1296px;
+    margin: 0 auto;
+    padding-bottom: 182px;
+    #Header{
+        padding-top: 96px;
+        line-height: 55px;
+        letter-spacing: -1px;
+        font-family: 'Pretendard700';
+        font-size: 40px;
+    }
+    #Middle{
+        display: flex;
+        flex-wrap: wrap;
+        .item{
+            flex: 1;
+            position: relative;
+            max-width: 666px;
+            padding: 0 18px;
+            box-sizing: border-box;
+            &:nth-child(2){
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+                .card{
+                    height: 192px;
+                    width: 287px;
+                    .Photo{
+                        .Title{
+                            font-size: 22px;
+                            line-height: 32px;
+                        }
+                    }
+                }
+            }
+        }
+        .card{
+            overflow: hidden;
+            position: relative;
+            margin-top: 36px;
+            border-radius: 14px;
+            background-color: var(--colorBg10);
+            box-shadow: 4px 12px 30px 6px rgb(0 0 0 / 9%);
+            display: block;
+            box-sizing: border-box;
+            .Title{
+                .Top{
+                    padding: 25px 24px 0;
+                    svg{
+                        width: 36px;
+                        height: 36px;
+                        display: inline-block;
+                        margin-right: 8px;
+                        vertical-align: top;
+                    }
+                    .Balloon{
+                        display: inline-block;
+                        position: relative;
+                        height: 34px;
+                        margin-top: 1px;
+                        padding: 0 13px;
+                        border-radius: 13px;
+                        font-size: 13px;
+                        line-height: 34px;
+                        background-color: #eee;
+                        vertical-align: top;
+                        &::before{
+                            position: absolute;
+                            top: 0;
+                            left: -4px;
+                            width: 16px;
+                            height: 16px;
+                            background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18' fill='%23eee' %3E%3Cpath d='M0 0c3.003 2.178 4.963 5.706 4.961 9.699V18H18C18 8.059 9.941 0 0 0'/></svg>");
+                            content: "";
+                        }
+                    }
+                }
+            }
+            .Photo{
+                .Title{
+                    font-family: 'Pretendard700';
+                    padding: 0 24px 0;
+                    max-height: 92px;
+                    height: 92px;
+                    margin-top: 13px;
+                    font-size: 32px;
+                    line-height: 46px;
+                    letter-spacing: -1px;
+                }
+                .Tag{
+                    color: #666;
+                    font-size: 14px;
+                    padding: 25px 24px 0;
+                    span{
+                        font-family: 'Pretendard400';
+                        margin-right: 6px;
+                    }
+                }
+                .Image{
+                    margin-top: 31px;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+            }
         }
     }
 }
