--- a/웹사이트 제작 연습/kakaocorp.com/static/css/style.css
+++ b/웹사이트 제작 연습/kakaocorp.com/static/css/style.css
@@ -149,6 +149,8 @@ img {
     box-sizing: border-box;
   }
   #Contents #Middle .card .Title .Top {
+    display: flex;
+    align-items: center;
     padding: 25px 24px 0;
   }
   #Contents #Middle .card .Title .Top svg {
@@ -178,6 +180,14 @@ img {
     height: 16px;
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18' fill='%23eee' %3E%3Cpath d='M0 0c3.003 2.178 4.963 5.706 4.961 9.699V18H18C18 8.059 9.941 0 0 0'/></svg>");
     content: "";
+  }
+  #Contents #Middle .card .Title .Top .Date {
+    display: inline-block;
+    margin: 8px 0 0 6px;
+    font-size: 13px;
+    color: #666;
+    letter-spacing: 0;
+    font-family: "Pretendard400";
   }
   #Contents #Middle .card .Photo .Title {
     font-family: "Pretendard700";
@@ -286,6 +296,8 @@ img {
     box-sizing: border-box;
   }
   #Contents #Middle .card .Title .Top {
+    display: flex;
+    align-items: center;
     padding: 25px 24px 0;
   }
   #Contents #Middle .card .Title .Top svg {
@@ -315,6 +327,14 @@ img {
     height: 16px;
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18' fill='%23eee' %3E%3Cpath d='M0 0c3.003 2.178 4.963 5.706 4.961 9.699V18H18C18 8.059 9.941 0 0 0'/></svg>");
     content: "";
+  }
+  #Contents #Middle .card .Title .Top .Date {
+    display: inline-block;
+    margin: 8px 0 0 6px;
+    font-size: 13px;
+    color: #666;
+    letter-spacing: 0;
+    font-family: "Pretendard400";
   }
   #Contents #Middle .card .Photo .Title {
     font-family: "Pretendard700";
@@ -423,6 +443,8 @@ img {
     box-sizing: border-box;
   }
   #Contents #Middle .card .Title .Top {
+    display: flex;
+    align-items: center;
     padding: 25px 24px 0;
   }
   #Contents #Middle .card .Title .Top svg {
@@ -452,6 +474,14 @@ img {
     height: 16px;
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18' fill='%23eee' %3E%3Cpath d='M0 0c3.003 2.178 4.963 5.706 4.961 9.699V18H18C18 8.059 9.941 0 0 0'/></svg>");
     content: "";
+  }
+  #Contents #Middle .card .Title .Top .Date {
+    display: inline-block;
+    margin: 8px 0 0 6px;
+    font-size: 13px;
+    color: #666;
+    letter-spacing: 0;
+    font-family: "Pretendard400";
   }
   #Contents #Middle .card .Photo .Title {
     font-family: "Pretendard700";
@@ -560,6 +590,8 @@ img {
     box-sizing: border-box;
   }
   #Contents #Middle .card .Title .Top {
+    display: flex;
+    align-items: center;
     padding: 25px 24px 0;
   }
   #Contents #Middle .card .Title .Top svg {
@@ -589,6 +621,14 @@ img {
     height: 16px;
     background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18' fill='%23eee' %3E%3Cpath d='M0 0c3.003 2.178 4.963 5.706 4.961 9.699V18H18C18 8.059 9.941 0 0 0'/></svg>");
     content: "";
+  }
+  #Contents #Middle .card .Title .Top .Date {
+    display: inline-block;
+    margin: 8px 0 0 6px;
+    font-size: 13px;
+    color: #666;
+    letter-spacing: 0;
+    font-family: "Pretendard400";
   }
   #Contents #Middle .card .Photo .Title {
     font-family: "Pretendard700";
