--- a/웹사이트 제작 연습/kakaocorp.com/static/scss/_.Desktop.scss
+++ b/웹사이트 제작 연습/kakaocorp.com/static/scss/_.Desktop.scss
@@ -77,6 +77,8 @@ nav{
             box-sizing: border-box;
             .Title{
                 .Top{
+                    display: flex;
+                    align-items: center;
                     padding: 25px 24px 0;
                     svg{
                         width: 36px;
@@ -105,6 +107,14 @@ nav{
                             background-image:url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18' fill='%23eee' %3E%3Cpath d='M0 0c3.003 2.178 4.963 5.706 4.961 9.699V18H18C18 8.059 9.941 0 0 0'/></svg>");
                             content: "";
                         }
+                    }
+                    .Date{
+                        display: inline-block;
+                        margin: 8px 0 0 6px;
+                        font-size: 13px;
+                        color: #666;
+                        letter-spacing: 0;
+                        font-family: 'Pretendard400';
                     }
                 }
             }
